package com.company;

public class Result {
    public void addResultToTeam(){

    }
}
